--- a/app/src/main/res/layout/rate_fragment.xml
+++ b/app/src/main/res/layout/rate_fragment.xml
@@ -37,7 +37,7 @@
         <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="New Button"
+            android:text="@string/title_enter_button"
             android:id="@+id/enter" />
     </LinearLayout>
 
