--- a/app/src/main/res/drawable/ripple_test.xml
+++ b/app/src/main/res/drawable/ripple_test.xml
@@ -1,11 +1,5 @@
-<?xml version="1.0" encoding="utf-8"?>
-<ripple xmlns:android="http://schemas.android.com/apk/res/android"
-    android:color="?android:colorControlHighlight">
-    <!--<item>-->
-        <!--<shape android:shape="rectangle">-->
-            <!--<stroke-->
-                <!--android:color="?android:colorAccent"-->
-                <!--android:width="1dp" />-->
-        <!--</shape>-->
-    <!--</item>-->
-</ripple>
+<selector xmlns:android="http://schemas.android.com/apk/res/android">
+    <item android:drawable="@color/primary_light" android:state_focused="true"/>
+    <item android:drawable="@color/primary_light" android:state_pressed="true"/>
+    <item android:drawable="@android:color/transparent"/>
+</selector>
