--- a/app/src/main/res/layout/currency_list_item.xml
+++ b/app/src/main/res/layout/currency_list_item.xml
@@ -1,12 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:orientation="horizontal" android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:gravity="center_vertical"
+    android:background="@drawable/ripple_test"
+    android:padding="16dp">
+
+    <ImageView
+        android:layout_width="28dp"
+        android:layout_height="28dp"
+        android:id="@+id/icon_currency_field"
+        android:src="@drawable/rub"
+        android:layout_marginRight="16dp"
+        android:layout_marginLeft="16dp" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="New Text"
-        android:id="@+id/pair"
-        android:padding="5dp" />
+        android:text="Российский рубль"
+        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+        android:id="@+id/currency_field"
+        android:textSize="12dp"
+        android:textColor="#af000000" />
+
 </LinearLayout>
