--- a/app/src/main/res/layout/user_history_item.xml
+++ b/app/src/main/res/layout/user_history_item.xml
@@ -8,7 +8,7 @@
     <LinearLayout
         android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content">
 
         <LinearLayout
             android:orientation="horizontal"
@@ -24,119 +24,139 @@
                 android:textAppearance="?android:attr/textAppearanceSmall"
                 android:text="14 августа 2015"
                 android:id="@+id/textView3"
-                android:textSize="8dp"
-                android:textColor="#b1000000" />
+                android:textSize="12sp"
+                android:textColor="#af000000" />
         </LinearLayout>
 
         <LinearLayout
             android:orientation="horizontal"
             android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:background="#3a000000"
-            android:layout_marginLeft="16dp"></LinearLayout>
+            android:layout_height="1dp"
+            android:background="#6b000000"
+            android:visibility="gone"></LinearLayout>
 
         <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="48dp"
             android:orientation="horizontal"
-            android:gravity="center_vertical|center_horizontal">
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center_vertical"
+            android:layout_weight="1"
+            android:layout_margin="16dp">
+
+            <ImageView
+                android:layout_width="28dp"
+                android:layout_height="28dp"
+                android:id="@+id/base_currency_image"
+                android:src="@drawable/eur" />
+
+            <ImageView
+                android:layout_width="28dp"
+                android:layout_height="28dp"
+                android:id="@+id/compare_currency_image"
+                android:src="@drawable/rub"
+                android:layout_marginLeft="8dp" />
+
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/imageView"
+                android:src="@drawable/arrow"
+                android:visibility="gone" />
 
             <LinearLayout
-                android:orientation="horizontal"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:gravity="center_vertical"
-                android:layout_weight="1"
-                android:layout_marginLeft="16dp">
+                android:orientation="vertical"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="16dp"
+                android:gravity="center_vertical">
 
-                <ImageView
-                    android:layout_width="24dp"
-                    android:layout_height="24dp"
-                    android:id="@+id/compare_currency_image"
-                    android:src="@drawable/rub" />
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Европейский евро"
+                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+                    android:id="@+id/base_name_currency"
+                    android:textSize="12dp"
+                    android:textColor="#af000000" />
 
-                <LinearLayout
-                    android:orientation="vertical"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:gravity="center_vertical"
-                    android:layout_marginLeft="8dp">
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="50 145 RUB"
-                        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
-                        android:id="@+id/value"
-                        android:textSize="12dp" />
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="Американский доллар"
-                        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
-                        android:id="@+id/textView"
-                        android:textSize="8dp"
-                        android:textColor="#60000000" />
-                </LinearLayout>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+                    android:id="@+id/base_value"
+                    android:textSize="18dp"
+                    android:text="1 000  EUR"
+                    android:typeface="normal" />
 
             </LinearLayout>
 
             <LinearLayout
                 android:orientation="vertical"
-                android:layout_width="32dp"
-                android:layout_height="match_parent"
-                android:layout_marginRight="16dp">
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="8dp"
+                android:gravity="bottom"
+                android:layout_marginBottom="8dp"
+                android:visibility="gone">
 
-                <ImageView
+                <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:id="@+id/imageView"
-                    android:src="@drawable/arrow" />
+                    android:text="50 145 RUB"
+                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+                    android:id="@+id/value"
+                    android:textSize="12dp" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Американский доллар"
+                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+                    android:id="@+id/textView"
+                    android:textSize="8dp"
+                    android:textColor="#60000000" />
             </LinearLayout>
 
             <LinearLayout
-                android:orientation="horizontal"
+                android:orientation="vertical"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:gravity="center_vertical"
-                android:layout_weight="1">
+                android:layout_height="wrap_content"
+                android:gravity="center_vertical|center_horizontal|right"
+                android:layout_marginRight="16dp">
 
-                <ImageView
-                    android:layout_width="24dp"
-                    android:layout_height="24dp"
-                    android:id="@+id/base_currency_image"
-                    android:src="@drawable/eur" />
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="закрытие на \n12.11.2015"
+                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+                    android:id="@+id/textView5"
+                    android:textSize="12sp"
+                    android:textColor="#af000000"
+                    android:visibility="gone" />
 
-                <LinearLayout
-                    android:orientation="vertical"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_marginLeft="8dp"
-                    android:gravity="center_vertical">
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+                    android:id="@+id/diff_base_currency"
+                    android:textSize="18dp"
+                    android:textIsSelectable="false"
+                    android:textColor="#ffb9262d"
+                    android:text="-25 EUR" />
 
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
-                        android:id="@+id/rate"
-                        android:textSize="12dp"
-                        android:text="1 000 USD"
-                        android:typeface="normal" />
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="Европейский евро"
-                        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
-                        android:id="@+id/textView2"
-                        android:textSize="8dp"
-                        android:textColor="#60000000" />
-                </LinearLayout>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="остаток: 975 EUR"
+                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+                    android:id="@+id/balance_field"
+                    android:textSize="12sp"
+                    android:textColor="#af000000" />
 
             </LinearLayout>
 
         </LinearLayout>
+
     </LinearLayout>
 
 </FrameLayout>
