--- a/app/src/main/res/layout/result_fragment.xml
+++ b/app/src/main/res/layout/result_fragment.xml
@@ -567,7 +567,7 @@
     </LinearLayout>
 
     <LinearLayout
-        android:orientation="horizontal"
+        android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
@@ -575,8 +575,19 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/title_exit_operation_button"
-            android:id="@+id/button"
+            android:id="@+id/exit_operation_btn"
             android:background="@drawable/bg_enter_operation_btn"
+            android:textColor="@android:color/white"
+            android:textSize="14dp"
+            android:padding="4dp"
+            android:layout_marginBottom="4dp" />
+
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/title_remove_operation_button"
+            android:id="@+id/remove_operation_btn"
+            android:background="@drawable/bg_remove_operation_btn"
             android:textColor="@android:color/white"
             android:textSize="14dp"
             android:padding="4dp" />
