--- a/app/src/main/res/layout/user_history_item.xml
+++ b/app/src/main/res/layout/user_history_item.xml
@@ -16,16 +16,29 @@
             android:layout_height="wrap_content"
             android:paddingLeft="16dp"
             android:paddingTop="4dp"
-            android:paddingBottom="4dp">
+            android:paddingBottom="4dp"
+            android:paddingRight="16dp">
 
             <TextView
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:textAppearance="?android:attr/textAppearanceSmall"
                 android:text="14 августа 2015"
                 android:id="@+id/open_date"
                 android:textSize="12sp"
-                android:textColor="#af000000" />
+                android:textColor="#af000000"
+                android:layout_weight="1" />
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textAppearance="?android:attr/textAppearanceSmall"
+                android:text="14 августа 2015"
+                android:id="@+id/exit_date"
+                android:textSize="12sp"
+                android:textColor="#af000000"
+                android:layout_weight="1"
+                android:gravity="right" />
         </LinearLayout>
 
         <LinearLayout
@@ -158,5 +171,13 @@
         </LinearLayout>
 
     </LinearLayout>
+
+    <LinearLayout
+        android:orientation="horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="#51ffffff"
+        android:id="@+id/history_area"
+        android:visibility="gone"></LinearLayout>
 
 </FrameLayout>
