--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,20 +2,15 @@
 <resources>
 
     <color name="primary_alpha">#4D31B8A3</color>
-    <color name="text_secondary">#727272</color>
-    <color name="text_primary">#757575</color>
 
-    <color name="primary">#3F51B5</color>
-    <color name="primary_dark">#303F9F</color>
+    <color name="primary">#ff316896</color>
+    <color name="primary_dark">#ff316896</color>
     <color name="primary_light">#C5CAE9</color>
     <color name="accent">#00BCD4</color>
     <color name="primary_text">#212121</color>
-    <color name="secondary_text">#727272</color>
     <color name="icons">#FFFFFF</color>
-    <color name="divider">#B6B6B6</color>
 
-
-    <color name="negative_color">#ffb9262d</color>
+    <color name="negative_color">#fff44336</color>
     <color name="positive_color">#009688</color>
 
 
