--- a/app/src/main/res/layout/bank_item_layout.xml
+++ b/app/src/main/res/layout/bank_item_layout.xml
@@ -72,7 +72,7 @@
                 android:layout_height="wrap_content"
                 android:text="закрытие на \n12.11.2015"
                 android:textAppearance="@style/TextAppearance.AppCompat.Body1"
-                android:id="@+id/textView2"
+                android:id="@+id/textView"
                 android:textSize="12sp"
                 android:textColor="#af000000"
                 android:visibility="gone" />
@@ -81,7 +81,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textAppearance="@style/TextAppearance.AppCompat.Body1"
-                android:id="@+id/textView3"
+                android:id="@+id/change_balance"
                 android:textSize="18dp"
                 android:textIsSelectable="false"
                 android:textColor="@android:color/black"
@@ -92,7 +92,7 @@
                 android:layout_height="wrap_content"
                 android:text="остаток: 975 EUR"
                 android:textAppearance="@style/TextAppearance.AppCompat.Body1"
-                android:id="@+id/textView4"
+                android:id="@+id/residue_balance"
                 android:textSize="12sp"
                 android:textColor="@android:color/black" />
         </LinearLayout>
