--- a/app/src/main/res/layout/result_fragment.xml
+++ b/app/src/main/res/layout/result_fragment.xml
@@ -59,8 +59,8 @@
             <Button
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Банки"
-                android:id="@+id/qwe"
+                android:text="@string/title_list_banks_button"
+                android:id="@+id/open_list_banks_btn"
                 android:textColor="@android:color/black"
                 android:textSize="12dp"
                 android:paddingLeft="16dp"
