--- a/app/src/main/res/layout/result_fragment.xml
+++ b/app/src/main/res/layout/result_fragment.xml
@@ -60,7 +60,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/title_list_banks_button"
-                android:id="@+id/open_list_banks_btn"
+                android:id="@+id/open_banks_list_btn"
                 android:textColor="@android:color/black"
                 android:textSize="12dp"
                 android:paddingLeft="16dp"
