--- a/app/src/main/res/layout/bank_item_layout.xml
+++ b/app/src/main/res/layout/bank_item_layout.xml
@@ -25,7 +25,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textAppearance="@style/TextAppearance.AppCompat.Body1"
-                android:id="@+id/base_value"
+                android:id="@+id/name_bank"
                 android:textSize="18dp"
                 android:text="Сбербанк"
                 android:typeface="normal" />
@@ -43,7 +43,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textAppearance="@style/TextAppearance.AppCompat.Body1"
-                android:id="@+id/diff_base_currency"
+                android:id="@+id/diff_base"
                 android:textSize="18dp"
                 android:textIsSelectable="false"
                 android:textColor="@android:color/black"
@@ -54,7 +54,7 @@
                 android:layout_height="wrap_content"
                 android:text="+ 2.6"
                 android:textAppearance="@style/TextAppearance.AppCompat.Body1"
-                android:id="@+id/balance_field"
+                android:id="@+id/diff_balance"
                 android:textSize="12sp"
                 android:textColor="@color/positive_color" />
 
@@ -81,7 +81,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textAppearance="@style/TextAppearance.AppCompat.Body1"
-                android:id="@+id/change_balance"
+                android:id="@+id/diff_base_currency"
                 android:textSize="18dp"
                 android:textIsSelectable="false"
                 android:textColor="@android:color/black"
@@ -92,7 +92,7 @@
                 android:layout_height="wrap_content"
                 android:text="остаток: 975 EUR"
                 android:textAppearance="@style/TextAppearance.AppCompat.Body1"
-                android:id="@+id/residue_balance"
+                android:id="@+id/balance_field"
                 android:textSize="12sp"
                 android:textColor="@android:color/black" />
         </LinearLayout>
