refactor ResultFragment horizontal orientation

--- a/app/src/main/res/layout-land/bank_item_layout.xml
+++ b/app/src/main/res/layout-land/bank_item_layout.xml
@@ -56,7 +56,7 @@
                 android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                 android:id="@+id/diff_balance"
                 android:textSize="12sp"
-                android:textColor="@color/negative_color" />
+                android:textColor="@color/positive_color" />
 
         </LinearLayout>
 
